--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Cartwright Hall
+title: Bradford Heritage Connection
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is a sample site to demonstrate how QR codes could be used to access
@@ -27,7 +27,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   making the information more easily accessible.
 baseurl: "/bdmag" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: BradfordMuseums
+twitter_username: ""
 
 
 # Build settings
@@ -59,13 +59,13 @@ plugins:
 # Page Generator Settings
 # Sets up data file for generating pages from data file rather than md or html files
 
-page_gen-dirs: true
+# page_gen-dirs: true
 
-page_gen:
-  - data: 'g4a'
-    template: 'artpage'
-    name_expr: record['AccessionNo'] + '-' + record['ArtName']
-    dir: 'g4'
-    title: 'ArtName'
-    index_files: false
+# page_gen:
+#  - data: 'g4a'
+#    template: 'artpage'
+#    name_expr: record['AccessionNo'] + '-' + record['ArtName']
+#    dir: 'g4'
+#    title: 'ArtName'
+#    index_files: false
 
