3rd time lucky?

--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,9 @@ facebook_username: coming soon...
 show_excerpts:  false
 
 # Build settings
-theme: minima
-plugins:
-  - jekyll-feed
+# theme: minima
+# plugins:
+#   - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
