--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   A little summary about Bradford Heritage Connection.  Maybe a mission 
   statement?  Probably some legal stuff - company number etc too.
+baseurl: "/bhc2"
 logo: images/bhc-mini.png
 twitter_username: coming soon...
 facebook_username: coming soon...
