First attempt at autogenerating events pages.

--- a/_config.yml
+++ b/_config.yml
@@ -53,3 +53,12 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+page_gen-dirs: true
+
+page_gen:
+  - data: 'bhc-events'
+    template: ''
+    dir: 'events'
+    title: 'Date - Event'
+    index_files: false
