--- a/_data/bhc-events.yml
+++ b/_data/bhc-events.yml
@@ -10,3 +10,27 @@
     Mauris non pellentesque tortor. Etiam cursus nisl sed auctor consequat. Nullam 
     condimentum volutpat ante vitae placerat.
     '': ''
+- Date: 02/07/2025
+  Time: 14:00-16:00
+  Event: 'Art Event'
+  Details: >-
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tortor sapien, 
+    lacinia ut lorem eu, laoreet posuere orci. Suspendisse elementum viverra 
+    lobortis. Integer lacus mi, faucibus eu lorem at, facilisis sagittis ex. Aliquam
+    vestibulum id risus tempor dictum. Vestibulum metus dolor, ultricies sodales
+    nisl ut, tincidunt accumsan arcu. In in ornare eros.  
+    Mauris non pellentesque tortor. Etiam cursus nisl sed auctor consequat. Nullam 
+    condimentum volutpat ante vitae placerat.
+    '': ''
+- Date: 01/07/2025
+  Time: 14:00-16:00
+  Event: 'Craft Event'
+  Details: >-
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tortor sapien, 
+    lacinia ut lorem eu, laoreet posuere orci. Suspendisse elementum viverra 
+    lobortis. Integer lacus mi, faucibus eu lorem at, facilisis sagittis ex. Aliquam
+    vestibulum id risus tempor dictum. Vestibulum metus dolor, ultricies sodales
+    nisl ut, tincidunt accumsan arcu. In in ornare eros.  
+    Mauris non pellentesque tortor. Etiam cursus nisl sed auctor consequat. Nullam 
+    condimentum volutpat ante vitae placerat.
+    '': ''
