Add an event that has already happened to see if it's still displayed.

--- a/_data/bhc-events.yml
+++ b/_data/bhc-events.yml
@@ -31,3 +31,14 @@
     nisl ut, tincidunt accumsan arcu. In in ornare eros.  
     Mauris non pellentesque tortor. Etiam cursus nisl sed auctor consequat. Nullam 
     condimentum volutpat ante vitae placerat.
+- Event: 'Past Event'
+  Date: 05/03/2025
+  Time: 10:00-14:00
+  Details: >-
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tortor sapien, 
+    lacinia ut lorem eu, laoreet posuere orci. Suspendisse elementum viverra 
+    lobortis. Integer lacus mi, faucibus eu lorem at, facilisis sagittis ex. Aliquam
+    vestibulum id risus tempor dictum. Vestibulum metus dolor, ultricies sodales
+    nisl ut, tincidunt accumsan arcu. In in ornare eros.  
+    Mauris non pellentesque tortor. Etiam cursus nisl sed auctor consequat. Nullam 
+    condimentum volutpat ante vitae placerat.
