Remove test/check lines for global values and update baseurl to have a / at the end.

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Bradford Heritage Connection
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Bradford Heritage Connection CIC.  Registered in England and Wales, company number 16039881.  A Community Interest Company dedicated to the preservation of Bradford's heritage.
-baseurl: "/bhc2"
+baseurl: "/bhc2/"
 logo: images/bhc-mini.png
 twitter_username: coming soon...
 facebook_username: coming soon...
