Fix cathedral text

--- a/_data/bhf-events-2025.yaml
+++ b/_data/bhf-events-2025.yaml
@@ -6,7 +6,7 @@
     Date: 11/07/2025
     Times: 10.30am-3.30pm
     ShortDesc: 'Visit the West Yorkshire Archive Service stall and give bookbinding a whirl. Using an easy sewing technique, you’ll learn to make books any size you like, perfect for little gifts!'
-    LongDesc: 'Visit the West Yorkshire Archive Service stall and give bookbinding a whirl.The West Yorkshire Archive Service care for a huge range of archive collections including bound volumes, books, notepads, and diaries. The conservation team regularly repair and stabilise historic volumes so they can be used and enjoyed into the future. Using an easy sewing technique, you’ll learn to make books any size you like, perfect for little gifts! FREE'
+    LongDesc: 'Visit the West Yorkshire Archive Service stall and give bookbinding a whirl.  The West Yorkshire Archive Service care for a huge range of archive collections including bound volumes, books, notepads, and diaries.  The conservation team regularly repair and stabilise historic volumes so they can be used and enjoyed into the future. Using an easy sewing technique, you’ll learn to make books any size you like, perfect for little gifts! FREE'
     Category1: Heritage
     Category2: 'Arts & Crafts'
     LeadName: 'Fiona Marshall'
@@ -40,66 +40,15 @@
     Date: 11/07/2025
     Times: 11am-2pm
     ShortDesc: 'As part of our "Weaving Stories" project, funded by the National Lottery Heritage Fund, we are holding two days of free events, aimed at crafting groups, crafters, general members of the public and families. There will be exhibitions, craft demonstrations and opportunities to try your hand at some crafts, including our specially-installed loom.'
-    LongDesc: "\"FREE event for all crafters. Demonstrations by Bradford Weavers, Spinners & Dyers and the Cathedral Stitchers. Experiences: Try your hand at embroidery stitching and weave a line of a tapestry on our loom, adding to our artwork that is being created over the next few months. Exhibitions: Almost 3.5 million stitches have been knitted by volunteers into a 15-metres-long warming stripe display called Knit the Stripes, which charts our changing temperature from the 1850s to present. The beautiful and powerful artwork Woven Lives talks of the lives and stories of the people of Bradford. The woven coloured glass and symbols, lit from within, show how light and dark times are all part of the story of community and connection. Ecclesiastical Textiles \r"
-    Category1: null
-    Category2: null
-    LeadName: null
-    LeadEmail: null
-    ImageDesc: null
-    ImageCredit: null
-    ImageName: null
-    Notes: null
--
-    EventTitle: " Bradford Cathedral is fortunate enough to have in its collection a number of beautiful, intricate and historically significant textiles, which will be out on display.EXTRA: Ecclesiastical textiles tours £7 per person. Join our guide for special ecclesiastical textiles’ tours of the Cathedral at 11.00 and 1.00. \r"
-    VenueAddress: null
-    VenuePhone: null
-    VenueWebsite: null
-    Date: null
-    Times: null
-    ShortDesc: null
-    LongDesc: null
-    Category1: null
-    Category2: null
-    LeadName: null
-    LeadEmail: null
-    ImageDesc: null
-    ImageCredit: null
-    ImageName: null
-    Notes: null
--
-    EventTitle: " Booking is essential. 11.00 tour- https://bradfordcathedral.org.uk/event/ecclesiastical-textiles-tour-7/ 1.00 tour- https://bradfordcathedral.org.uk/event/ecclesiastical-textiles-tour-8/ \r"
-    VenueAddress: null
-    VenuePhone: null
-    VenueWebsite: null
-    Date: null
-    Times: null
-    ShortDesc: null
-    LongDesc: null
-    Category1: null
-    Category2: null
-    LeadName: null
-    LeadEmail: null
-    ImageDesc: null
-    ImageCredit: null
-    ImageName: null
-    Notes: null
--
-    EventTitle: ' or call the Cathedral office on 01274 777720"'
-    VenueAddress: Heritage
-    VenuePhone: 'Arts & Crafts'
-    VenueWebsite: 'Maggie Myers/Shaeron Caton-Rose'
-    Date: 'maggie.myers@bradfordcathedral.org shaeron@me.com'
-    Times: 'Crafting the Cathedral'
-    ShortDesc: 'Also need Lottery Logo'
-    LongDesc: bhf008.png
-    Category1: "\r"
-    Category2: null
-    LeadName: null
-    LeadEmail: null
-    ImageDesc: null
-    ImageCredit: null
-    ImageName: null
-    Notes: null
+    LongDesc: '"FREE event for all crafters. Demonstrations by Bradford Weavers, Spinners & Dyers and the Cathedral Stitchers. Experiences: Try your hand at embroidery stitching and weave a line of a tapestry on our loom, adding to our artwork that is being created over the next few months. Exhibitions: Almost 3.5 million stitches have been knitted by volunteers into a 15-metres-long warming stripe display called Knit the Stripes, which charts our changing temperature from the 1850s to present. The beautiful and powerful artwork Woven Lives talks of the lives and stories of the people of Bradford. The woven coloured glass and symbols, lit from within, show how light and dark times are all part of the story of community and connection. Ecclesiastical Textiles.  Bradford Cathedral is fortunate enough to have in its collection a number of beautiful, intricate and historically significant textiles, which will be out on display.\nEXTRA: Ecclesiastical textiles tours £7 per person. Join our guide for special ecclesiastical textiles’ tours of the Cathedral at 11.00 and 1.00. Booking is essential. 11.00 tour- \nhttps://bradfordcathedral.org.uk/event/ecclesiastical-textiles-tour-7/ 1.00 tour- \nhttps://bradfordcathedral.org.uk/event/ecclesiastical-textiles-tour-8/ or call the Cathedral office on 01274 777720"'
+    Category1: Heritage
+    Category2: 'Arts & Crafts'
+    LeadName: 'Maggie Myers/Shaeron Caton-Rose'
+    LeadEmail: 'maggie.myers@bradfordcathedral.org shaeron@me.com'
+    ImageDesc: 'Crafting the Cathedral'
+    ImageCredit: 'Also need Lottery Logo'
+    ImageName: bhf008.png
+    Notes: "\r"
 -
     EventTitle: 'Mapping Bradford''s History'
     VenueAddress: 'Mechanics Institute'
@@ -278,7 +227,7 @@
     Date: 12/07/2025
     Times: 11am-2pm
     ShortDesc: 'As part of our "Weaving Stories" project, funded by the National Lottery Heritage Fund, we are holding two days of free events, aimed at crafting groups, crafters, general members of the public and families. There will be exhibitions, craft demonstrations and opportunities to try your hand at some crafts, including our specially-installed loom.'
-    LongDesc: 'FREE event- for everyone, including families. Demonstrations by Bradford Weavers, Spinners & Dyers and the Cathedral Stitchers. West Riding Stone Carvers Association will be demonstrating their craft in the Cathedral grounds. Experiences Try your hand at embroidery stitching and simple card weaving. You can also weave a line of a tapestry on our loom and be part of our artwork which is being created over the next few months. Natural dyeing quiz – Have a go at matching the wool to the plant. Exhibitions: Knit the Stripes and Woven Lives. For details, see above. EXTRA: Craft Tour £7 per person. A guided tour of the Cathedral, with extra information about some of our beautifully-crafted features, objects and textiles. The tour will take place at 12.00. Book at: https://bradfordcathedral.org.uk/event/craft-tour/ or call the Cathedral office on 01274 777720'
+    LongDesc: 'FREE event- for everyone, including families. Demonstrations by Bradford Weavers, Spinners & Dyers and the Cathedral Stitchers. West Riding Stone Carvers Association will be demonstrating their craft in the Cathedral grounds. Experiences Try your hand at embroidery stitching and simple card weaving. You can also weave a line of a tapestry on our loom and be part of our artwork which is being created over the next few months. Natural dyeing quiz – Have a go at matching the wool to the plant. Exhibitions: Knit the Stripes and . ven Lives. For details, see above. EXTRA: Craft Tour £7 per person. A guided tour of the Cathedral, with extra information about some of our beautifully-crafted features, objects and textiles. The tour will take place at 12.00. Book at: https://bradfordcathedral.org.uk/event/craft-tour/ or call the thedral office on 01274 777720'
     Category1: Heritage
     Category2: 'Arts & Crafts'
     LeadName: 'Maggie Myers/Shaeron Caton-Rose'
