--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Bradford Heritage Connection
-email: your-email@example.com
+email: vicky@bradfordheritageconnection.co.uk
 description: >- # this means to ignore newlines until "baseurl:"
   Bradford Heritage Connection CIC.  Registered in England and Wales, company number 16039881.  A Community Interest Company dedicated to the preservation of Bradford's heritage.
 baseurl: "/"
