--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Bradford Heritage Connection CIC.  Registered in England and Wales, company number 16039881.  A Community Interest Company dedicated to the preservation of Bradford's heritage.
 baseurl: "/"
 logo: images/bhc-mini.png
-twitter_username: coming soon...
-facebook_username: coming soon...
+# twitter_username: coming soon...
+# facebook_username: coming soon...
 show_excerpts:  false
 
 # Build settings
